--- a/new-project/01-starting-project/src/components/CourseGoals/CourseInput/CourseInput.module.css
+++ b/new-project/01-starting-project/src/components/CourseGoals/CourseInput/CourseInput.module.css
@@ -1,4 +1,4 @@
-/* .form-control {
+.form-control {
   margin: 0.5rem 0;
 }
 
@@ -25,9 +25,9 @@
 
 .form-control.invalid input {
   border-color: red;
-  background: rgb(177, 134, 134);
+  background: #ffd7d7;
 }
 
 .form-control.invalid label {
   color: red;
-} */
+}
