--- a/user-project/src/components/Users/AddUser/AddUser.module.css
+++ b/user-project/src/components/Users/AddUser/AddUser.module.css
@@ -12,11 +12,16 @@
 	gap: 0.5rem;
 }
 
-.form-control-wrapper label {
+label {
 	text-transform: capitalize;
 	font-size: 1.5rem;
+	color: white;
 }
 
 .test {
 	border-left: 13px solid white;
+}
+
+.usernameInvalid, .ageInvalid {
+	color: red;
 }
