--- a/user-project/src/components/Users/AddUser/AddUser.module.css
+++ b/user-project/src/components/Users/AddUser/AddUser.module.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
-	align-items: start;
+	align-items: flex-start;
 }
 
 .form-control-wrapper {
