--- a/user-project/src/components/UI/Card.module.css
+++ b/user-project/src/components/UI/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-	box-shadow: 0px 0px 3px 3px rgba(54, 54, 54, 0.445);
-  padding: 2rem;
+  background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
 }
